exam/_misc/k8s-product-setup/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  type: LoadBalancer
  externalIPs:
  - <IP주소>
