exam/_misc/k8s-product-setup/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: jenkins
spec:
  rules:
  - host: pe-jenkins.<도메인>.com
    http:
      paths:
      - backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
